[metadata]
name = component-manager-austinhellerrepo
version = 0.0.4
author = Austin Heller
description = A basic api interface for the Component Manager API
url = https://github.com/AustinHellerRepo/ComponentManager
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  requests

[options.packages.find]
where = src
